--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "http": "^0.0.1-security",
+    "socket.io": "^4.7.2"
   }
 }
