--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "axios": "^1.6.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "http": "^0.0.1-security",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "socket.io": "^4.7.2"
   }
 }
