--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http": "^0.0.1-security",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   }
 }
