--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
+    "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2"
   }
 }
