--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "mongoose": "^8.1.0",
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2"
   }
