--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "mongoose": "^8.1.0",
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.12",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
-    "sweetalert2": "^11.10.5"
+    "sweetalert2": "^11.10.5",
+    "twilio": "^5.0.1",
+    "uuid": "^9.0.1"
   }
 }
