--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
