--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "http": "^0.0.1-security",
@@ -29,6 +30,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "mongoose-paginate-v2": "^1.8.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.12",
     "passport": "^0.7.0",
@@ -39,6 +41,7 @@
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.10.5",
     "twilio": "^5.0.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
   }
 }
