--- a/package.json
+++ b/package.json
@@ -39,8 +39,12 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
+    "swagger": "^0.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "sweetalert2": "^11.10.5",
     "twilio": "^5.0.1",
+    "ui": "^0.2.4",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   }
