--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-session": "^1.18.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "mongoose-paginate-v2": "^1.8.0",
