--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch index.js",
+    "start": "node --watch src/index.js",
     "start:dev": "nodemon src/index.js",
     "test": "mocha test/supertest.test.js"
   },
